# knmi-lakehouse

./: .dockerignore  .env.template  .gitignore  CONTEXT_HANDOVER.md  Dockerfile  GEMINI.md  README.md  dagster.yaml  docker-compose.yaml  main.py  pyproject.toml
src/: definitions.py  partitions.py
src/assets/: ingestion.py  metadata.py
src/utils/: smart_client.py
tests/: find_de_bilt.py  inspect_data.py  manual_verification.py  test_hourly.py  test_hourly_10yr.py  test_ingestion_10yr.py  verify_dagster_defs.py  verify_storage.py
