[project]
name = "knmi-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.12.3",
    "dagster-duckdb>=0.28.3",
    "dagster-webserver>=1.12.3",
    "dbt-duckdb>=1.10.0",
    "duckdb>=1.4.2",
    "fsspec>=2025.10.0",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "s3fs>=2025.10.0",
    "streamlit>=1.51.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
